--- a/01_clean_emission_data_v2.ipynb
+++ b/01_clean_emission_data_v2.ipynb
@@ -203,6 +203,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 173,
+   "id": "f4935536-0738-4be3-851f-1cb25798959d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      0.25\n",
+       "1      0.25\n",
+       "2      0.25\n",
+       "3      0.25\n",
+       "4      0.25\n",
+       "       ... \n",
+       "271    0.25\n",
+       "272    0.25\n",
+       "273    0.25\n",
+       "274    0.25\n",
+       "275    0.25\n",
+       "Length: 276, dtype: float64"
+      ]
+     },
+     "execution_count": 173,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Confirm emissions factor used for the calculation of PM2.5 emissions\n",
+    "pd.set_option('display.max_columns', None)\n",
+    "emi = pd.read_csv(os.path.join(path, \"rct_emissions_data.csv\"))\n",
+    "emi['pm_2_5_emissions']*1000/emi['energy_input_1_lakh']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 102,
    "id": "cc44b9dd-08ab-4ee3-aa15-32cd86332f31",
    "metadata": {},
@@ -548,8 +583,6 @@
     }
    ],
    "source": [
-    "pd.set_option('display.max_columns', None)\n",
-    "emi = pd.read_csv(os.path.join(path, \"rct_emissions_data.csv\"))\n",
     "emi = emi[['kiln_id','kiln_district','co2_emission','pm_2_5_emissions','annual_production_actual_lakh_bricks','firing_month',\n",
     "           'firing_week','firing_end_month','firing_end_week','weight_bricks_fired','total_energy_input','sec','total_production_kpm']].copy()\n",
     "emi['kiln_type'] = 'zigzag'\n",
@@ -3594,7 +3627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 159,
    "id": "a9e7496a-82dd-4c34-98cc-8b101b25d1ef",
    "metadata": {},
    "outputs": [],
